export const snapshot = {};

snapshot[`createObjectValueMixin - toHaveUserMatching 1`] = `
'Expected user to match { name: "Bob" }, but got { name: "Alice", age: 30 }

Diff (-Actual / +Expected):

    {
  -   name: "Alice",
  +   name: "Bob",
      age: 30,
    }'
`;

snapshot[`createObjectValueMixin - toHaveUserProperty 1`] = `
'Expected user to have property "email"

Diff (-Actual / +Expected):

    {
      name: "Alice",
      age: 30,
  +   email: [Any],
    }'
`;

snapshot[`createObjectValueMixin - toHaveUserProperty 2`] = `
'Expected data to have property "user.address.country"

Diff (-Actual / +Expected):

    {
      user: {
        address: {
          city: "Tokyo",
  +       country: [Any],
        },
      },
    }'
`;

snapshot[`createObjectValueMixin - toHaveUserProperty 3`] = `
'Expected user to have property "name" with value Bob

Diff (-Actual / +Expected):

    {
  -   name: "Alice",
  +   name: "Bob",
      age: 30,
    }'
`;

snapshot[`createObjectValueMixin - toHaveUserProperty 4`] = `
'Expected data to have property "user.address.city" with value Osaka

Diff (-Actual / +Expected):

    {
      user: {
        address: {
  -       city: "Tokyo",
  +       city: "Osaka",
        },
      },
    }'
`;

snapshot[`createObjectValueMixin - toHaveUserProperty 5`] = `
'Expected data to have property "user.name"

Diff (-Actual / +Expected):

    {
      "user.name": "Alice",
      age: 30,
  +   user: {
  +     name: [Any],
  +   },
    }'
`;

snapshot[`createObjectValueMixin - toHaveUserPropertyContaining 1`] = `'Expected data property "message" to contain goodbye'`;

snapshot[`createObjectValueMixin - toHaveUserPropertyContaining 2`] = `'Expected data property "user.tags" to contain guest'`;

snapshot[`createObjectValueMixin - toHaveUserPropertyMatching 1`] = `'Expected data property "config" to match { port: 3000 }'`;

snapshot[`createObjectValueMixin - toHaveUserPropertyMatching 2`] = `'Expected data property "server.database" to match { port: 3306 }'`;

snapshot[`createObjectValueMixin - toHaveUserPropertySatisfying 1`] = `'Expected data property "message" to satisfy the matcher, but it failed: Must be goodbye'`;

snapshot[`createObjectValueMixin - toHaveUserPropertySatisfying 2`] = `'Expected data property "user.profile.age" to satisfy the matcher, but it failed: Must be 18 or older'`;

snapshot[`createObjectValueMixin - toHaveUserMatching with source context 1`] = `
'Expected user to match { name: "Bob" }, but got { name: "Alice", age: 30 }

Diff (-Actual / +Expected):

    {
  -   name: "Alice",
  +   name: "Bob",
      age: 30,
    }

Context (packages/probitas-expect/mixin/object_value_mixin_test.ts:236:5)

  235│     const applied = mixin({ dummy: true });
  236│     await assertSnapshotWithoutColors(
  237│       t,
     ┆
  558│       t,
  559│       catchError(() => applied.toHaveUserMatching({ name: "Bob" })).message,
     │                                ^
  560│     );'
`;

snapshot[`createObjectValueMixin - toHaveUserMatching with source context 2`] = `
'[1m[31mExpected user to match { name: "Bob" }, but got { name: "Alice", age: 30 }[39m[0m

[1mDiff ([31m-Actual[39m / [32m+Expected[39m):[0m

[90m    {[39m
[31m  -   name: "Alice",[39m
[32m  +   name: "Bob",[39m
[90m      age: 30,[39m
[90m    }[39m

[1mContext[0m [90m(packages/probitas-expect/mixin/object_value_mixin_test.ts:251:5)[39m

  [90m250│       );[39m
  [90m251│       const applied = mixin({ dummy: true });[39m
  [90m252│       await assertSnapshotWithoutColors([39m
  [90m   ┆[39m
  [90m575│       t,[39m
  [90m576│       catchError(() => applied.toHaveUserMatching({ name: "Bob" })).message,[39m
  [90m   │                                [39m[31m^[39m
  [90m577│     );[39m'
`;
